--- a/environment.yml
+++ b/environment.yml
@@ -20,4 +20,13 @@ dependencies:
       - matplotlib==3.8.2
       - pillow==10.1.0
       - pyparsing==3.1.1
+      - jupyter-client==8.6.0
+      - jupyter-core==5.5.0
+      - jupyter-events==0.9.0
+      - jupyter-lsp==2.2.1
+      - jupyter-server==2.11.1
+      - jupyter-server-terminals==0.4.4
+      - jupyterlab==4.0.9
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.25.2
 prefix: /home/yash6599/miniconda3/envs/pygmt
