Update .gitignore path

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ data/*_extended2.csv
 data/*Zone.Identifier
 data/*.csv
 .DS_Store
-code/__pycache__
-code/.ipynb_checkpoints
+**/__pycache__/
+**/.ipynb_checkpoints
