--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,9 @@
-name: pygmt2
+name: pygmt3
 channels:
   - conda-forge
   - defaults
 dependencies:
+  - black=23.11.0
   - debugpy=1.8.0
   - gmt=6.4.0
   - matplotlib-inline=0.1.6
@@ -10,6 +11,7 @@ dependencies:
   - pandas=2.1.3
   - pip=23.3.1
   - pygmt=0.10.0
+  - pylint=3.0.2
   - python=3.12.0
   - scipy=1.11.3
   - pip:
