--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - pylint=3.0.2
   - python=3.12.0
   - scipy=1.11.3
+  - flake8=4.0.1
   - pip:
       - contourpy==1.2.0
       - cycler==0.12.1
