--- a/environment.yml
+++ b/environment.yml
@@ -1,35 +1,203 @@
-name: pygmt3
+name: pygmt2
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - black=23.11.0
-  - debugpy=1.8.0
-  - gmt=6.4.0
-  - matplotlib-inline=0.1.6
-  - numpy=1.26.0
-  - pandas=2.1.3
-  - pip=23.3.1
-  - pygmt=0.10.0
-  - pylint=3.0.2
-  - python=3.12.0
-  - scipy=1.11.3
-  - flake8=4.0.1
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - astroid=2.14.2=py312h06a4308_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - blas=1.0=openblas
+  - blosc=1.21.5=h0f2a231_0
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.22.1=hd590300_0
+  - ca-certificates=2023.11.17=hbcca054_0
+  - cairo=1.18.0=h3faef2a_0
+  - certifi=2023.11.17=py312h06a4308_0
+  - cfitsio=4.3.0=hbdc6101_0
+  - cftime=1.6.3=py312hc7c0aa3_0
+  - colorama=0.4.6=py312h06a4308_0
+  - comm=0.1.4=pyhd8ed1ab_0
+  - curl=8.4.0=hca28451_0
+  - dcw-gmt=2.1.2=ha770c72_0
+  - debugpy=1.8.0=py312h30efb56_1
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - dill=0.3.7=py312h06a4308_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_0
+  - executing=2.0.1=pyhd8ed1ab_0
+  - expat=2.5.0=h6a678d5_0
+  - fftw=3.3.10=nompi_hc118613_108
+  - flake8=6.0.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-anaconda=1=h8fa9717_0
+  - fonts-conda-ecosystem=1=hd3eb1b0_0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=h4a9f257_0
+  - freexl=2.0.0=h743c826_0
+  - gdal=3.8.0=py312ha5e4baf_6
+  - geos=3.12.1=h59595ed_0
+  - geotiff=1.7.1=hf074850_14
+  - gettext=0.21.1=h27087fc_0
+  - ghostscript=10.02.1=h59595ed_0
+  - giflib=5.2.1=h5eee18b_3
+  - gmt=6.4.0=h81c209b_17
+  - gshhg-gmt=2.3.7=ha770c72_1003
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.2=nompi_h4f84152_100
+  - icu=73.2=h59595ed_0
+  - ipykernel=6.26.0=pyhf8b6a83_0
+  - ipython=8.18.1=pyh31011fe_1
+  - isort=5.9.3=pyhd3eb1b0_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - json-c=0.17=h7ab15ed_0
+  - jupyter_client=8.6.0=py312h06a4308_0
+  - jupyter_core=5.5.0=py312h06a4308_0
+  - kealib=1.5.2=hcd42e92_1
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.2=h659d440_0
+  - lazy-object-proxy=1.6.0=py312h5eee18b_0
+  - lcms2=2.15=hb7c19ff_3
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20230802.1=cxx17_h59595ed_0
+  - libaec=1.1.2=h59595ed_1
+  - libarchive=3.7.2=h039dbb9_0
+  - libblas=3.9.0=20_linux64_openblas
+  - libboost-headers=1.83.0=ha770c72_0
+  - libcblas=3.9.0=20_linux64_openblas
+  - libcrc32c=1.1.2=h6a678d5_0
+  - libcurl=8.4.0=hca28451_0
+  - libdeflate=1.19=hd590300_0
+  - libedit=3.1.20221030=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libexpat=2.5.0=hcb278e6_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-ng=13.2.0=h807b86a_3
+  - libgdal=3.8.0=he7dcfe9_6
+  - libgfortran-ng=13.2.0=h69a702a_3
+  - libgfortran5=13.2.0=ha4646dd_3
+  - libglib=2.78.2=h783c2da_0
+  - libgomp=13.2.0=h807b86a_3
+  - libgoogle-cloud=2.12.0=h5206363_4
+  - libgrpc=1.59.3=hd6c4280_0
+  - libiconv=1.17=h166bdaf_0
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - libkml=1.3.0=h096b73e_7
+  - liblapack=3.9.0=20_linux64_openblas
+  - libnetcdf=4.9.2=nompi_h80fb2b6_112
+  - libnghttp2=1.58.0=h47da74e_0
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.25=pthreads_h413a1c8_0
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=16.1=hfc447b1_2
+  - libprotobuf=4.24.4=hf27288f_0
+  - libre2-11=2023.06.02=h7a70373_0
+  - librttopo=1.1.0=h8917695_15
+  - libsodium=1.0.18=h7b6447c_0
+  - libspatialite=5.1.0=h7385560_2
+  - libsqlite=3.44.2=h2797004_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-ng=13.2.0=h7e041cc_3
+  - libtiff=4.6.0=ha9c0a0a_2
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.11.6=h232c23b_0
+  - libzip=1.10.1=h2629f0a_3
+  - libzlib=1.2.13=hd590300_5
+  - lz4-c=1.9.4=h6a678d5_0
+  - lzo=2.10=h7b6447c_2
+  - matplotlib-inline=0.1.6=py312h06a4308_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
+  - minizip=4.0.3=h0ab5242_0
+  - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.5.8=pyhd8ed1ab_0
+  - netcdf4=1.6.5=nompi_py312h26027e0_100
+  - nspr=4.35=h6a678d5_0
+  - nss=3.95=h1d7d5a4_0
+  - numpy=1.26.2=py312h2809609_0
+  - numpy-base=1.26.2=py312he1a6c75_0
+  - openjpeg=2.5.0=h488ebb8_3
+  - openssl=3.2.0=hd590300_1
+  - packaging=23.2=pyhd8ed1ab_0
+  - pandas=2.1.3=py312hfb8ada1_0
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pcre=8.45=h295c915_0
+  - pcre2=10.42=hebb0a14_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pip=23.3.1=py312h06a4308_0
+  - pixman=0.42.2=h59595ed_0
+  - platformdirs=4.0.0=pyhd8ed1ab_0
+  - poppler=23.11.0=h590f24d_0
+  - poppler-data=0.4.12=hd8ed1ab_0
+  - postgresql=16.1=h8972f4a_2
+  - proj=9.3.0=h1d62c97_2
+  - prompt-toolkit=3.0.41=pyha770c72_0
+  - psutil=5.9.5=py312h98912ed_1
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycodestyle=2.10.0=py312h06a4308_0
+  - pyflakes=3.0.1=py312h06a4308_0
+  - pygments=2.17.2=pyhd8ed1ab_0
+  - pygmt=0.10.0=pyhd8ed1ab_0
+  - pylint=2.16.2=py312h06a4308_0
+  - python=3.12.0=hab00c5b_0_cpython
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - python_abi=3.12=4_cp312
+  - pytz=2023.3.post1=py312h06a4308_0
+  - pyzmq=25.1.1=py312h886d080_2
+  - re2=2023.06.02=h2873b5e_0
+  - readline=8.2=h5eee18b_0
+  - scipy=1.11.4=py312h2809609_0
+  - setuptools=68.2.2=pyhd8ed1ab_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.10=h9fff704_0
+  - sqlite=3.44.2=h2c6b66d_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tiledb=2.16.3=h8c794c1_3
+  - tk=8.6.13=noxft_h4845f30_101
+  - tomlkit=0.11.1=py312h06a4308_0
+  - tornado=6.3.3=py312h5eee18b_0
+  - traitlets=5.14.0=pyhd8ed1ab_0
+  - typing_extensions=4.8.0=pyha770c72_0
+  - tzcode=2023c=h0b41bf4_0
+  - tzdata=2023c=h04d1e81_0
+  - uriparser=0.9.7=h5eee18b_0
+  - wcwidth=0.2.12=pyhd8ed1ab_0
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - wrapt=1.14.1=py312h5eee18b_0
+  - xarray=2023.11.0=pyhd8ed1ab_0
+  - xerces-c=3.2.4=h6a678d5_1
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h27cfd23_1007
+  - xz=5.4.5=h5eee18b_0
+  - zeromq=4.3.5=h59595ed_0
+  - zlib=1.2.13=hd590300_5
+  - zstd=1.5.5=hc292b87_0
   - pip:
       - contourpy==1.2.0
       - cycler==0.12.1
       - fonttools==4.45.0
+      - importlib-metadata==4.8.3
       - kiwisolver==1.4.5
       - matplotlib==3.8.2
       - pillow==10.1.0
       - pyparsing==3.1.1
-      - jupyter-client==8.6.0
-      - jupyter-core==5.5.0
-      - jupyter-events==0.9.0
-      - jupyter-lsp==2.2.1
-      - jupyter-server==2.11.1
-      - jupyter-server-terminals==0.4.4
-      - jupyterlab==4.0.9
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.25.2
-prefix: /home/yash6599/miniconda3/envs/pygmt
+      - zipp==3.17.0
+prefix: /home/yash6599/miniconda3/envs/pygmt2
